--- a/index.html
+++ b/index.html
@@ -12,6 +12,52 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+
+    <div class="seccion-student">
+      <div class="row">
+        <div class="col s12 m12 l4">
+          <div class="tarjeta divShadow izquierda">
+            <div class="row">
+              <div class="col m6 l12">
+                <img class="responsive-img" src="img/Seccion_Student/professor.png" alt="algo" id="imgIzquierda">
+              </div>
+              <div class="col m6 l12">
+                <h3 class="center-align" id="izquierdaTitle"></h3>
+                <p id="izquierdaContent"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l4">
+          <div class="tarjeta divShadow centro">
+            <div class="row">
+              <div class="col m12 l12">
+                <img class="responsive-img" src="img/Seccion_Student/exams.png" alt="algo" id="imgCentro"/>
+              </div>
+              <div class="col m12 l12">
+                <h3 class="center" id="centroTitle"></h3>
+                <p id="centroContent"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l4">
+          <div class="tarjeta divShadow derecha">
+            <div class="row">
+              <div class="col m12 l12">
+                <img class="responsive-img" src="img/Seccion_Student/update.png" alt="algo" id="imgDerecho" />
+              </div>
+              <div class="col m12 l12">
+                <h3 class="center" id="derechaTitle"></h3>
+                <p id="derechaContent"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/app.js"></script>
