--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-
     <div class="seccion-student">
       <div class="row">
         <div class="col s12 m12 l4">
           <div class="tarjeta divShadow izquierda">
             <div class="row">
               <div class="col m6 l12">
-                <img class="responsive-img" src="img/Seccion_Student/professor.png" alt="algo" id="imgIzquierda">
+                <img
+                  class="responsive-img"
+                  src="img/Seccion_Student/professor.png"
+                  alt="algo"
+                  id="imgIzquierda"
+                />
               </div>
               <div class="col m6 l12">
                 <h3 class="center-align" id="izquierdaTitle"></h3>
@@ -33,7 +37,12 @@
           <div class="tarjeta divShadow centro">
             <div class="row">
               <div class="col m12 l12">
-                <img class="responsive-img" src="img/Seccion_Student/exams.png" alt="algo" id="imgCentro"/>
+                <img
+                  class="responsive-img"
+                  src="img/Seccion_Student/exams.png"
+                  alt="algo"
+                  id="imgCentro"
+                />
               </div>
               <div class="col m12 l12">
                 <h3 class="center" id="centroTitle"></h3>
@@ -47,12 +56,47 @@
           <div class="tarjeta divShadow derecha">
             <div class="row">
               <div class="col m12 l12">
-                <img class="responsive-img" src="img/Seccion_Student/update.png" alt="algo" id="imgDerecho" />
+                <img
+                  class="responsive-img"
+                  src="img/Seccion_Student/update.png"
+                  alt="algo"
+                  id="imgDerecho"
+                />
               </div>
               <div class="col m12 l12">
                 <h3 class="center" id="derechaTitle"></h3>
                 <p id="derechaContent"></p>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--Misión y Vision-->
+    <div class="seccion_MisionYVision">
+      <div class="row">
+        <div class="col s12 m6 mision">
+          <div class="row">
+            <div class="col m3">
+              <p>Info Misión</p>
+            </div>
+            <div class="col m9">
+              <div class="circulo valign-wrapper">
+                <h3>Misión</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6 vision">
+          <div class="row">
+            <div class="col m9">
+              <div class="circulo valign-wrapper">
+                <h3>Vision</h3>
+              </div>
+            </div>
+            <div class="col m3">
+              <p>Info Vision</p>
             </div>
           </div>
         </div>
