--- a/index.html
+++ b/index.html
@@ -75,28 +75,29 @@
 
     <!--Misión y Vision-->
     <div class="seccion_MisionYVision">
-      <div class="row">
-        <div class="col s12 m6 mision">
-          <div class="row">
-            <div class="col m3">
-              <p>Info Misión</p>
+      <div class="row ">
+        <div class="col s12 m12 l6 mision">
+          <div class="row mision-vision-content">
+            <div class="col s4 m4 center">
+              <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sem mi, tempus ac quam in, tempor eleifend diam. In consequat sem sit amet consequat dictum. Vivamus non mattis justo. Morbi non justo pulvinar, scelerisque eros in, efficitur lacus. Ut pretium id eros a porttitor. Morbi varius ante quam, tempor tincidunt nunc cursus ac. In hac habitasse platea dictumst. Sed in rhoncus nisl. Quisque faucibus libero sed massa dignissim sodales. Phasellus vel ligula pulvinar, ullamcorper purus et, tempor nisl.</p>
             </div>
-            <div class="col m9">
-              <div class="circulo valign-wrapper">
+            <div class="col s8 m8">
+              <div class="circulo">
                 <h3>Misión</h3>
               </div>
             </div>
           </div>
         </div>
-        <div class="col s12 m6 vision">
-          <div class="row">
-            <div class="col m9">
-              <div class="circulo valign-wrapper">
+
+        <div class="col s12 m12 l6 vision">
+          <div class="row mision-vision-content">
+            <div class="col s8 m8">
+              <div class="circulo">
                 <h3>Vision</h3>
               </div>
             </div>
-            <div class="col m3">
-              <p>Info Vision</p>
+            <div class="col s4 m4 center">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sem mi, tempus ac quam in, tempor eleifend diam. In consequat sem sit amet consequat dictum. Vivamus non mattis justo. Morbi non justo pulvinar, scelerisque eros in, efficitur lacus. Ut pretium id eros a porttitor. Morbi varius ante quam, tempor tincidunt nunc cursus ac. In hac habitasse platea dictumst. Sed in rhoncus nisl. Quisque faucibus libero sed massa dignissim sodales. Phasellus vel ligula pulvinar, ullamcorper purus et, tempor nisl.</p>
             </div>
           </div>
         </div>
