Se implemento la seccion de about aplication

--- a/index.html
+++ b/index.html
@@ -18,6 +18,45 @@
     />
   </head>
   <body>
+    <!--Seccion About call-->
+    <div class="about-call container">
+      <div class="row about-content">
+        <div class="col m12 arriba">
+          <div class="row">
+            <div class="col m12 l5 offset-l1">
+              <img class="responsive-img divShadow" src="./img/About-Call/video-call.jpg" alt="call" />
+            </div>
+            <div class="col m12 l5 center about-description">
+              <h3>Make a Video Call</h3>
+              <p>
+                lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque
+                eleifend interdum pulvinar. maecenas euismod euismod aliquet.
+                nam magna dolor, convallis in lobortis posuere, convallis sed
+                quam.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col m12 abajo ">
+          <div class="row ">
+            <div class="col m12 l4 push-l6 offset-l1">
+              <img class="responsive-img divShadow" src="./img/About-Call/zoom-call.jpg" alt="call" />
+            </div>
+            <div class="col m12 l6 pull-l4 center about-description">
+              <h3>Integrated with zoom</h3>
+              <p >
+                lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque
+                eleifend interdum pulvinar. maecenas euismod euismod aliquet.
+                nam magna dolor, convallis in lobortis posuere, convallis sed
+                quam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Seccion Student-->
     <div class="seccion-student">
       <div class="row">
         <div class="col s12 m12 l4">
