Add seccion about mobile with img hand hold a mobile

--- a/index.html
+++ b/index.html
@@ -18,13 +18,40 @@
     />
   </head>
   <body>
+    <!--Seccion Mobile about-->
+    <div class="container seccion-mobile-about">
+      <div class="row">
+        <div class="col m12 l6">
+          <img
+            src="./img/About_Mobile/mobile-with-hand.png"
+            class="responsive-img"
+            alt="mobile-app"
+          />
+        </div>
+        <div class="col m12 l6">
+          <blockquote>
+            <h3>Reservate from mobile app</h3>
+            <p class="flow-text">
+              lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque
+              eleifend interdum pulvinar. maecenas euismod euismod aliquet. nam
+              magna dolor, convallis in lobortis posuere, convallis sed quam.
+            </p>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+    <!--fin seccion movile about -->
     <!--Seccion About call-->
     <div class="about-call container">
       <div class="row about-content">
         <div class="col m12 arriba">
           <div class="row">
             <div class="col m12 l5 offset-l1">
-              <img class="responsive-img divShadow" src="./img/About-Call/video-call.jpg" alt="call" />
+              <img
+                class="responsive-img divShadow"
+                src="./img/About-Call/video-call.jpg"
+                alt="call"
+              />
             </div>
             <div class="col m12 l5 center about-description">
               <h3>Make a Video Call</h3>
@@ -38,14 +65,18 @@
           </div>
         </div>
 
-        <div class="col m12 abajo ">
-          <div class="row ">
+        <div class="col m12 abajo">
+          <div class="row">
             <div class="col m12 l4 push-l6 offset-l1">
-              <img class="responsive-img divShadow" src="./img/About-Call/zoom-call.jpg" alt="call" />
+              <img
+                class="responsive-img divShadow"
+                src="./img/About-Call/zoom-call.jpg"
+                alt="call"
+              />
             </div>
             <div class="col m12 l6 pull-l4 center about-description">
               <h3>Integrated with zoom</h3>
-              <p >
+              <p>
                 lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque
                 eleifend interdum pulvinar. maecenas euismod euismod aliquet.
                 nam magna dolor, convallis in lobortis posuere, convallis sed
