Add img for mobile about

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Seccion Mobile about-->
     <div class="container seccion-mobile-about">
       <div class="row">
-        <div class="col m12 l6">
+        <div class="col m12 l6 mobile-reserve">
           <img
             src="./img/About_Mobile/mobile-with-hand.png"
             class="responsive-img"
