--- a/index.html
+++ b/index.html
@@ -1,206 +1,276 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap" rel="stylesheet" />
+</head>
+
+<body>
     <!--Seccion Mobile about-->
     <div class="container seccion-mobile-about">
-      <div class="row">
-        <div class="col m12 l6 mobile-reserve">
-          <img
-            src="./img/About_Mobile/mobile-with-hand.png"
-            class="responsive-img"
-            alt="mobile-app"
-          />
+        <div class="row">
+            <div class="col m12 l6 mobile-reserve">
+                <img src="./img/About_Mobile/mobile-with-hand.png" class="responsive-img" alt="mobile-app" />
+            </div>
+            <div class="col m12 l6">
+                <blockquote>
+                    <h3>Reservate from mobile app</h3>
+                    <p class="flow-text">
+                        lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque eleifend interdum pulvinar. maecenas euismod euismod aliquet. nam magna dolor, convallis in lobortis posuere, convallis sed quam.
+                    </p>
+                </blockquote>
+            </div>
         </div>
-        <div class="col m12 l6">
-          <blockquote>
-            <h3>Reservate from mobile app</h3>
-            <p class="flow-text">
-              lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque
-              eleifend interdum pulvinar. maecenas euismod euismod aliquet. nam
-              magna dolor, convallis in lobortis posuere, convallis sed quam.
-            </p>
-          </blockquote>
-        </div>
-      </div>
     </div>
     <!--fin seccion movile about -->
     <!--Seccion About call-->
     <div class="about-call container">
-      <div class="row about-content">
-        <div class="col m12 arriba">
-          <div class="row">
-            <div class="col m12 l5 offset-l1">
-              <img
-                class="responsive-img divShadow"
-                src="./img/About-Call/video-call.jpg"
-                alt="call"
-              />
+        <div class="row about-content">
+            <div class="col m12 arriba">
+                <div class="row">
+                    <div class="col m12 l5 offset-l1">
+                        <img class="responsive-img divShadow" src="./img/About-Call/video-call.jpg" alt="call" />
+                    </div>
+                    <div class="col m12 l5 center about-description">
+                        <h3>Make a Video Call</h3>
+                        <p>
+                            lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque eleifend interdum pulvinar. maecenas euismod euismod aliquet. nam magna dolor, convallis in lobortis posuere, convallis sed quam.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="col m12 l5 center about-description">
-              <h3>Make a Video Call</h3>
-              <p>
-                lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque
-                eleifend interdum pulvinar. maecenas euismod euismod aliquet.
-                nam magna dolor, convallis in lobortis posuere, convallis sed
-                quam.
-              </p>
-            </div>
-          </div>
-        </div>
 
-        <div class="col m12 abajo">
-          <div class="row">
-            <div class="col m12 l4 push-l6 offset-l1">
-              <img
-                class="responsive-img divShadow"
-                src="./img/About-Call/zoom-call.jpg"
-                alt="call"
-              />
+            <div class="col m12 abajo">
+                <div class="row">
+                    <div class="col m12 l4 push-l6 offset-l1">
+                        <img class="responsive-img divShadow" src="./img/About-Call/zoom-call.jpg" alt="call" />
+                    </div>
+                    <div class="col m12 l6 pull-l4 center about-description">
+                        <h3>Integrated with zoom</h3>
+                        <p>
+                            lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque eleifend interdum pulvinar. maecenas euismod euismod aliquet. nam magna dolor, convallis in lobortis posuere, convallis sed quam.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="col m12 l6 pull-l4 center about-description">
-              <h3>Integrated with zoom</h3>
-              <p>
-                lorem ipsum dolor sit amet, consectetur adipiscing elit. quisque
-                eleifend interdum pulvinar. maecenas euismod euismod aliquet.
-                nam magna dolor, convallis in lobortis posuere, convallis sed
-                quam.
-              </p>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
     <!--Seccion Student-->
     <div class="seccion-student">
-      <div class="row">
-        <div class="col s12 m12 l4">
-          <div class="tarjeta divShadow izquierda">
-            <div class="row">
-              <div class="col m6 l12">
-                <img
-                  class="responsive-img"
-                  src="img/Seccion_Student/professor.png"
-                  alt="algo"
-                  id="imgIzquierda"
-                />
-              </div>
-              <div class="col m6 l12">
-                <h3 class="center-align" id="izquierdaTitle"></h3>
-                <p id="izquierdaContent"></p>
-              </div>
+        <div class="row">
+            <div class="col s12 m12 l4">
+                <div class="tarjeta divShadow izquierda">
+                    <div class="row">
+                        <div class="col m6 l12">
+                            <img class="responsive-img" src="img/Seccion_Student/professor.png" alt="algo" id="imgIzquierda" />
+                        </div>
+                        <div class="col m6 l12">
+                            <h3 class="center-align" id="izquierdaTitle"></h3>
+                            <p id="izquierdaContent"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
 
-        <div class="col s12 m6 l4">
-          <div class="tarjeta divShadow centro">
-            <div class="row">
-              <div class="col m12 l12">
-                <img
-                  class="responsive-img"
-                  src="img/Seccion_Student/exams.png"
-                  alt="algo"
-                  id="imgCentro"
-                />
-              </div>
-              <div class="col m12 l12">
-                <h3 class="center" id="centroTitle"></h3>
-                <p id="centroContent"></p>
-              </div>
+            <div class="col s12 m6 l4">
+                <div class="tarjeta divShadow centro">
+                    <div class="row">
+                        <div class="col m12 l12">
+                            <img class="responsive-img" src="img/Seccion_Student/exams.png" alt="algo" id="imgCentro" />
+                        </div>
+                        <div class="col m12 l12">
+                            <h3 class="center" id="centroTitle"></h3>
+                            <p id="centroContent"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
 
-        <div class="col s12 m6 l4">
-          <div class="tarjeta divShadow derecha">
-            <div class="row">
-              <div class="col m12 l12">
-                <img
-                  class="responsive-img"
-                  src="img/Seccion_Student/update.png"
-                  alt="algo"
-                  id="imgDerecho"
-                />
-              </div>
-              <div class="col m12 l12">
-                <h3 class="center" id="derechaTitle"></h3>
-                <p id="derechaContent"></p>
-              </div>
+            <div class="col s12 m6 l4">
+                <div class="tarjeta divShadow derecha">
+                    <div class="row">
+                        <div class="col m12 l12">
+                            <img class="responsive-img" src="img/Seccion_Student/update.png" alt="algo" id="imgDerecho" />
+                        </div>
+                        <div class="col m12 l12">
+                            <h3 class="center" id="derechaTitle"></h3>
+                            <p id="derechaContent"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
 
     <!--Misión y Vision-->
     <div class="seccion_MisionYVision">
-      <div class="row">
-        <div class="col s12 m12 l6 mision">
-          <div class="row mision-vision-content">
-            <div class="col s6 m6 center">
-              <p class="info-mi-vi">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                sem mi, tempus ac quam in, tempor eleifend diam. In consequat
-                sem sit amet consequat dictum. Vivamus non mattis justo. Morbi
-                non justo pulvinar, scelerisque eros in, efficitur lacus. Ut
-                pretium id eros a porttitor. Morbi varius ante quam, tempor
-                tincidunt nunc cursus ac. In hac habitasse platea dictumst. Sed
-                in rhoncus nisl. Quisque faucibus libero sed massa dignissim
-                sodales. Phasellus vel ligula pulvinar, ullamcorper purus et,
-                tempor nisl.
-              </p>
+        <div class="row">
+            <div class="col s12 m12 l6 mision">
+                <div class="row mision-vision-content">
+                    <div class="col s6 m6 center">
+                        <p class="info-mi-vi">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sem mi, tempus ac quam in, tempor eleifend diam. In consequat sem sit amet consequat dictum. Vivamus non mattis justo. Morbi non justo pulvinar, scelerisque eros in, efficitur lacus. Ut
+                            pretium id eros a porttitor. Morbi varius ante quam, tempor tincidunt nunc cursus ac. In hac habitasse platea dictumst. Sed in rhoncus nisl. Quisque faucibus libero sed massa dignissim sodales. Phasellus vel ligula pulvinar,
+                            ullamcorper purus et, tempor nisl.
+                        </p>
+                    </div>
+                    <div class="col s6 m6">
+                        <div class="circulo">
+                            <h1 class="white-text">Misión</h1>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col s6 m6">
-              <div class="circulo">
-                <h1 class="white-text">Misión</h1>
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <div class="col s12 m12 l6 vision">
-          <div class="row mision-vision-content">
-            <div class="col s6 m6">
-              <div class="circulo">
-                <h1 class="white-text">Vision</h1>
-              </div>
+            <div class="col s12 m12 l6 vision">
+                <div class="row mision-vision-content">
+                    <div class="col s6 m6">
+                        <div class="circulo">
+                            <h1 class="white-text">Vision</h1>
+                        </div>
+                    </div>
+                    <div class="col s6 m6 center">
+                        <p class="info-mi-vi">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sem mi, tempus ac quam in, tempor eleifend diam. In consequat sem sit amet consequat dictum. Vivamus non mattis justo. Morbi non justo pulvinar, scelerisque eros in, efficitur lacus. Ut
+                            pretium id eros a porttitor. Morbi varius ante quam, tempor tincidunt nunc cursus ac. In hac habitasse platea dictumst. Sed in rhoncus nisl. Quisque faucibus libero sed massa dignissim sodales. Phasellus vel ligula pulvinar,
+                            ullamcorper purus et, tempor nisl.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="col s6 m6 center">
-              <p class="info-mi-vi">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                sem mi, tempus ac quam in, tempor eleifend diam. In consequat
-                sem sit amet consequat dictum. Vivamus non mattis justo. Morbi
-                non justo pulvinar, scelerisque eros in, efficitur lacus. Ut
-                pretium id eros a porttitor. Morbi varius ante quam, tempor
-                tincidunt nunc cursus ac. In hac habitasse platea dictumst. Sed
-                in rhoncus nisl. Quisque faucibus libero sed massa dignissim
-                sodales. Phasellus vel ligula pulvinar, ullamcorper purus et,
-                tempor nisl.
-              </p>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
+
+
+
+
+
+    <!--Empeiza Seccion de planes  -->
+    <div id="dvSusc" class="container-fluid">
+        <div class="row">
+            <div id="dvPlan1" class="col l4 m6 s12 spaces">
+                <div id="crd1" class="card blue-grey darken-1 hoverable">
+                    <div class="card-content white-text">
+                        <span class="card-title">Plan Basico</span>
+                        <h2 class="PlansPrice h2Plan">$25</h2>
+                        <hr class="hrPlan">
+                        <span id="timePlan" class="card-title">Plan Mensual</span>
+                        <br>
+                        <ul class="collection">
+                            <li class="collection-item">Sesiones las 24 horas</li>
+
+                            <li class="collection-item">Horas ilimitadas</li>
+                            <li class="collection-item tachado">Ahorro 15%</li>
+
+
+                        </ul>
+                        <br>
+                        <a id="btnPlan" class="waves-effect waves-dark btn-large"><i
+                class="material-icons left">shop_two</i>Elegir</a>
+                    </div>
+
+                </div>
+            </div>
+            <div id="dvImportant" class="col l4 m6 s12 spaces">
+                <div id="crd2" class="card blue-grey darken-1 hoverable z-depth-5 ">
+
+                    <div class="card-content white-text hover">
+                        <span class="card-title">Plan Recomendado</span>
+                        <h2 class="PlansPrice h2Plan">$199</h2>
+
+                        <hr class="hrPlan">
+                        <span id="timePlan" class="card-title">Plan Anual</span>
+                        <br>
+                        <ul class="collection">
+                            <li class="collection-item">Sesiones las 24 horas</li>
+
+                            <li class="collection-item">Horas ilimitadas</li>
+                            <li class="collection-item ">Ahorro 15%</li>
+
+
+
+                        </ul>
+                        <br>
+                        <a id="btnPlani" class="waves-effect waves-dark btn-large pulse"><i
+                class="material-icons left">shop_two</i>Elegir</a>
+                    </div>
+
+                </div>
+            </div>
+            <div id="dvPlan3" class="col l4 m6 s12 spaces">
+                <div id="crd1" class="card blue-grey darken-1 hoverable">
+                    <div class="card-content white-text">
+                        <span class="card-title">Plan Medio</span>
+                        <h2 class="PlansPrice h2Plan">$70</h2>
+                        <hr class="hrPlan">
+                        <span id="timePlan" class="card-title">Plan Trimestral</span>
+                        <br>
+                        <ul class="collection">
+                            <li class="collection-item">Sesiones las 24 horas</li>
+
+                            <li class="collection-item">Horas ilimitadas</li>
+                            <li class="collection-item tachado">Ahorro 5%</li>
+
+
+
+                        </ul>
+                        <br>
+                        <a title="comprar" id="btnPlan" class="waves-effect waves-dark btn-large"><i
+                class="material-icons left">shop_two</i>Elegir</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+    <footer id="ftr" class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="black-text">ILanguage</h5>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="black-text">Enlaces</h5>
+                    <ul>
+                        <li><a class="black-text text-lighten-3" href="#!">Quienes Somos</a></li>
+                        <li><a class="black-text text-lighten-3" href="#!">Perfil del estudiante</a></li>
+                        <li><a class="black-text text-lighten-3" href="#!">Suscripciones</a></li>
+                        <li><a class="black-text text-lighten-3" href="#!">Perfil del tutor</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+
+            </div>
+        </div>
+    </footer>
+
+    <!-- Termina Seccion de planes  -->
+
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/app.js"></script>
-  </body>
+</body>
+
 </html>
