He cambiado el index.html y he creado una carpeta en las imagenes para poder agregar mis imagenes

--- a/index.html
+++ b/index.html
@@ -153,7 +153,54 @@
     </div>
 
 
+    <!--Empieza NOSOTROS  -->
+     <div class="wave-contenedor website">
+        <img src="img/hola.jpg" alt="">
+        <div class="contenedor-textos-main">
+            <h2 class="titulo left">Sobre Nosotros</h2>
+            <p class="parrafo">ILanguage es una aplicación web y móvil que permite aprender y/o perfeccionar diversos idiomas. La apicacion fue desarrollada por el startup llamado "Las Bichotas" la cual es una compañía que se fundó el 24 de marzo del 2021</p>
+            <a href="" class="cta">Aprende Más</a>
+        </div>
+    </div>
 
+    <div class="integrantes">
+        <h2 class="titulo">Nuestro Equipo</h2>
+        <figure>
+            <img src="img/1.png" alt="">
+            <div class="capa"> 
+            <h3>Luis Estrada </h3>
+            <p>Analista de sistemas</p>              
+            </div>
+        </figure>
+         <figure>
+            <img src="img/2.png" alt="">
+            <div class="capa"> 
+            <h3>Sebastian Torres</h3>
+            <p>CEO</p>              
+            </div>
+        </figure>
+         <figure>
+            <img src="img/3.jpg" alt="">
+            <div class="capa"> 
+            <h3>Sebastian Trujillo</h3>
+            <p>Gerente del area de sistemas</p>              
+            </div>
+        </figure>
+         <figure>
+            <img src="img/4.jpg" alt="">
+            <div class="capa"> 
+            <h3>Sebastian Toulier</h3>
+            <p>Programador</p>              
+            </div>
+        </figure>
+         <figure>
+            <img src="img/5.jpg" alt="">
+            <div class="capa"> 
+            <h3>David Huamani</h3>
+            <p>Jefe del Area de Produccion</p>              
+            </div>
+        </figure>        
+    </div>
 
 
     <!--Empeiza Seccion de planes  -->
