--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <!--Empieza NOSOTROS  -->
      <div class="wave-contenedor website">
-        <img src="img/hola.jpg" alt="">
+        <img src="img/Seccion_Nosotros/hola.jpg" alt="">
         <div class="contenedor-textos-main">
             <h2 class="titulo left">Sobre Nosotros</h2>
             <p class="parrafo">ILanguage es una aplicación web y móvil que permite aprender y/o perfeccionar diversos idiomas. La apicacion fue desarrollada por el startup llamado "Las Bichotas" la cual es una compañía que se fundó el 24 de marzo del 2021</p>
@@ -166,35 +166,35 @@
     <div class="integrantes">
         <h2 class="titulo">Nuestro Equipo</h2>
         <figure>
-            <img src="img/1.png" alt="">
+            <img src="img/Seccion_Nosotros/1.png" alt="">
             <div class="capa"> 
             <h3>Luis Estrada </h3>
             <p>Analista de sistemas</p>              
             </div>
         </figure>
          <figure>
-            <img src="img/2.png" alt="">
+            <img src="img/Seccion_Nosotros/2.png" alt="">
             <div class="capa"> 
             <h3>Sebastian Torres</h3>
             <p>CEO</p>              
             </div>
         </figure>
          <figure>
-            <img src="img/3.jpg" alt="">
+            <img src="img/Seccion_Nosotros/3.jpg" alt="">
             <div class="capa"> 
             <h3>Sebastian Trujillo</h3>
             <p>Gerente del area de sistemas</p>              
             </div>
         </figure>
          <figure>
-            <img src="img/4.jpg" alt="">
+            <img src="img/Seccion_Nosotros/4.jpg" alt="">
             <div class="capa"> 
             <h3>Sebastian Toulier</h3>
             <p>Programador</p>              
             </div>
         </figure>
          <figure>
-            <img src="img/5.jpg" alt="">
+            <img src="img/Seccion_Nosotros/5.jpg" alt="">
             <div class="capa"> 
             <h3>David Huamani</h3>
             <p>Jefe del Area de Produccion</p>              
