--- a/index.html
+++ b/index.html
@@ -154,12 +154,19 @@
 
 
     <!--Empieza NOSOTROS  -->
-     <div class="wave-contenedor website">
-        <img src="img/Seccion_Nosotros/hola.jpg" alt="">
-        <div class="contenedor-textos-main">
-            <h2 class="titulo left">Sobre Nosotros</h2>
+     <div class="wave-contenedor">
+       <div class="	row">	
+       
+       <div class="	col s12 m6 ">	
+          <img class="responsive-img" src="img/Seccion_Nosotros/hola.jpg" alt="">
+       </div>
+       
+        <div class="col s12 m6" >
+            <h2>Sobre Nosotros</h2>
             <p class="parrafo">ILanguage es una aplicación web y móvil que permite aprender y/o perfeccionar diversos idiomas. La apicacion fue desarrollada por el startup llamado "Las Bichotas" la cual es una compañía que se fundó el 24 de marzo del 2021</p>
             <a href="" class="cta">Aprende Más</a>
+        </div>
+
         </div>
     </div>
 
