--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap" rel="stylesheet" />
+    <script type="text/javascript" src="/js/app.js"></script>
 </head>
 
 <body>
@@ -202,7 +203,7 @@
 
                         </ul>
                         <br>
-                        <a id="btnPlani" class="waves-effect waves-dark btn-large pulse"><i
+                        <a href="#modal1" id="btnPlani" class="waves-effect waves-dark btn-large pulse modal-trigger"><i
                 class="material-icons left">shop_two</i>Elegir</a>
                     </div>
 
@@ -268,6 +269,32 @@
 
     <!-- Termina Seccion de planes  -->
 
+    <!-- Modal prueba gratis  -->
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal prueba gratis  -->
+    <script>
+        $('#myModal').on('shown.bs.modal', function() {
+            $('#myInput').trigger('focus')
+        })
+    </script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/app.js"></script>
