--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous">
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -17,6 +22,65 @@
 </head>
 
 <body>
+    <!--NavBar-->
+    <div class="navbar-fixed">
+        <nav class="indigo">
+            <div class="nav-wrapper container" role="navigation">
+                <a id="logo-container" href="#" class="brand-logo right">ILanguage</a>
+                <a href="#" data-target="menu-responsive" class="sidenav-trigger">
+                    <i class="material-icons">menu</i>
+                </a>
+                <ul class="left hide-on-med-and-down">
+                    <li><a href="#mission-vision">Mission and vision</a></li>
+                    <li><a href="#contact" >Contact</a></li>
+                    <li><a href="#student-profile">Student Profile</a></li>
+                    <li><a href="#tutor-profile">Tutor Profile</a></li>
+                    <li><a href="#about-us">About Us</a></li>
+                    <li><a href="#pay-plans">Pay Plans</a></li>
+                </ul>
+                <!--Responsive-->
+                <ul class="sidenav" id="menu-responsive">
+                    <li><a href="#mission-vision">Mission and vision</a></li>
+                    <li><a href="#contact" >Contact</a></li>
+                    <li><a href="#student-profile">Student Profile</a></li>
+                    <li><a href="#tutor-profile">Tutor Profile</a></li>
+                    <li><a href="#about-us">About Us</a></li>
+                    <li><a href="#pay-plans">Pay Plans</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <!--!NavBar-->
+    <!--Full background image, headings-->
+    <section id="hero" class="hero valign-wrapper">
+        <div class="container header-main">
+            <div class="row">
+                <div class="col s12 m6 l6">
+                    <div class="section center-align">
+                        <h5>Section 1</h5>
+                        <div class="divider"></div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias aperiam delectus
+                            dignissimos fugit itaque similique tenetur totam! Alias atque eaque earum esse id inventore
+                            laboriosam laborum sapiente suscipit vel!</p>
+                        <a class="waves-effect indigo  btn-small">TRY</a>
+                        <a class="waves-effect indigo-text white btn-small">LEARN MORE</a>
+                    </div>
+                </div>
+                <div class=" col s12 m5 l5">
+                    <div class="class center-align">
+                        <img class="responsive-img" src="img/home-page/laptop-img.png" alt="laptop img">
+                    </div>
+                </div>
+                <div id="iphone" class="col s6 m1 l1">
+                    <div class="class center-align" >
+                        <img class="iphone responsive-img " src="img/home-page/iphone-img.png" alt="iphone img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--!Full background image, headings-->
+
     <!--Seccion Mobile about-->
     <div class="container seccion-mobile-about">
         <div class="row">
@@ -325,6 +389,14 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/app.js"></script>
+    <!-- Nuevo -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var elems = document.querySelectorAll('.sidenav');
+            var instances = M.Sidenav.init(elems);
+        });
+    </script>
+
 </body>
 
 </html>
