--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <!--NavBar-->
     <div class="navbar-fixed">
-        <nav class="indigo">
+        <nav class="app-color">
             <div class="nav-wrapper container" role="navigation">
                 <a id="logo-container" href="#" class="brand-logo right">ILanguage</a>
                 <a href="#" data-target="menu-responsive" class="sidenav-trigger">
@@ -53,7 +53,7 @@
     </div>
     <!--!NavBar-->
     <!--Full background image, headings-->
-    <section id="hero" class="hero valign-wrapper">
+    <div id="hero" class="hero valign-wrapper">
         <div class="container header-main">
             <div class="row">
                 <div class="col s12 m6 l6">
@@ -63,7 +63,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias aperiam delectus
                             dignissimos fugit itaque similique tenetur totam! Alias atque eaque earum esse id inventore
                             laboriosam laborum sapiente suscipit vel!</p>
-                        <a class="waves-effect indigo  btn-small">TRY</a>
+                        <a class="waves-effect btn-small app-color">TRY</a>
                         <a class="waves-effect indigo-text white btn-small">LEARN MORE</a>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!--!Full background image, headings-->
 
     <!--Seccion Mobile about-->
@@ -363,12 +363,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/app.js"></script>
     <!-- Nuevo -->
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var elems = document.querySelectorAll('.sidenav');
-            var instances = M.Sidenav.init(elems);
-        });
-    </script>
+    
 
 </body>
 
