Correccion seccion estudent

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </div>
               <div class="col m6 l12">
                 <h3 class="center-align" id="izquierdaTitle"></h3>
-                <p id="izquierdaContent"></p>
+                <p class="center-align"id="izquierdaContent"></p>
               </div>
             </div>
           </div>
@@ -213,7 +213,7 @@
               </div>
               <div class="col m12 l12">
                 <h3 class="center" id="centroTitle"></h3>
-                <p id="centroContent"></p>
+                <p class="center-align"id="centroContent"></p>
               </div>
             </div>
           </div>
@@ -232,7 +232,7 @@
               </div>
               <div class="col m12 l12">
                 <h3 class="center" id="derechaTitle"></h3>
-                <p id="derechaContent"></p>
+                <p class="center-align" id="derechaContent"></p>
               </div>
             </div>
           </div>
