correccion de idioma a espaniol

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="col m12 l6">
           <blockquote>
-            <h3>Reservate from mobile app</h3>
+            <h3>Reserva desde la app</h3>
             <p class="flow-text">
               Reserva desde donde quieras una sesión con el tutor de tu
               preferencia para tener la mejor experiencia de aprendizaje en el
@@ -142,7 +142,7 @@
               />
             </div>
             <div class="col m12 l5 center about-description">
-              <h3>Make a Video Call</h3>
+              <h3>Haz tus sesiones por video llamada</h3>
               <p>
                 Ten sesiones gratificantes por video llamada con el tutor de tu
                 preferencia y disfruta de la mejor forma de mejorar en el idioma
@@ -163,7 +163,7 @@
               />
             </div>
             <div class="col m12 l6 pull-l4 center about-description">
-              <h3>Integrated with zoom</h3>
+              <h3>Integrado con zoom</h3>
               <p>
                 Integramos las sesiones con la aplicación zoom para tener la
                 mejor experiencia en video llamadas. Asi podrás realizar tus
@@ -179,7 +179,7 @@
     <div class="seccion-student">
       <div class="row">
         <div class="center">
-          <h1>Estudiantes</h1>
+          <h2>Estudiantes</h2>
         </div>
         <div class="col s12 m12 l4">
           <div class="tarjeta divShadow izquierda">
@@ -194,7 +194,7 @@
               </div>
               <div class="col m6 l12">
                 <h3 class="center-align" id="izquierdaTitle"></h3>
-                <p class="center-align"id="izquierdaContent"></p>
+                <p class="center-align" id="izquierdaContent"></p>
               </div>
             </div>
           </div>
@@ -213,7 +213,7 @@
               </div>
               <div class="col m12 l12">
                 <h3 class="center" id="centroTitle"></h3>
-                <p class="center-align"id="centroContent"></p>
+                <p class="center-align" id="centroContent"></p>
               </div>
             </div>
           </div>
@@ -247,15 +247,9 @@
           <div class="row mision-vision-content">
             <div class="col s6 m6 center">
               <p class="info-mi-vi">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                sem mi, tempus ac quam in, tempor eleifend diam. In consequat
-                sem sit amet consequat dictum. Vivamus non mattis justo. Morbi
-                non justo pulvinar, scelerisque eros in, efficitur lacus. Ut
-                pretium id eros a porttitor. Morbi varius ante quam, tempor
-                tincidunt nunc cursus ac. In hac habitasse platea dictumst. Sed
-                in rhoncus nisl. Quisque faucibus libero sed massa dignissim
-                sodales. Phasellus vel ligula pulvinar, ullamcorper purus et,
-                tempor nisl.
+                Crear una aplicación en donde las personas puedan aprender y
+                dominar un nuevo idioma, a través del uso de servicios y
+                materiales de la mejor calidad con una metodología revolucionaria.
               </p>
             </div>
             <div class="col s6 m6">
@@ -275,15 +269,9 @@
             </div>
             <div class="col s6 m6 center">
               <p class="info-mi-vi">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                sem mi, tempus ac quam in, tempor eleifend diam. In consequat
-                sem sit amet consequat dictum. Vivamus non mattis justo. Morbi
-                non justo pulvinar, scelerisque eros in, efficitur lacus. Ut
-                pretium id eros a porttitor. Morbi varius ante quam, tempor
-                tincidunt nunc cursus ac. In hac habitasse platea dictumst. Sed
-                in rhoncus nisl. Quisque faucibus libero sed massa dignissim
-                sodales. Phasellus vel ligula pulvinar, ullamcorper purus et,
-                tempor nisl.
+                Llegar a ser la empresa líder en nuestro sector y que nos
+                reconozcan por nuestras calidad de trabajo y método de
+                enseñanza.
               </p>
             </div>
           </div>
@@ -453,4 +441,3 @@
     </script>
   </body>
 </html>
-
