se agrego seccion nosotros

--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
               <p class="info-mi-vi">
                 Crear una aplicación en donde las personas puedan aprender y
                 dominar un nuevo idioma, a través del uso de servicios y
-                materiales de la mejor calidad con una metodología revolucionaria.
+                materiales de la mejor calidad con una metodología
+                revolucionaria.
               </p>
             </div>
             <div class="col s6 m6">
@@ -278,7 +279,69 @@
         </div>
       </div>
     </div>
+    <!--fin mision y vision-->
+    <!--Empieza NOSOTROS  -->
+    <div class="wave-contenedor nosotros-seccion ">
+      <div class="row">
+        <div class="col s12 m12 l6">
+          <img
+            class="responsive-img"
+            src="img/Seccion_Nosotros/hola.jpg"
+            alt=""
+          />
+        </div>
 
+        <div class="col s12 m12 l6">
+          <h2>Sobre Nosotros</h2>
+          <p class="parrafo">
+            ILanguage es una aplicación web y móvil que permite aprender y/o
+            perfeccionar diversos idiomas. La apicacion fue desarrollada por el
+            startup llamado "Las Bichotas" la cual es una compañía que se fundó
+            el 24 de marzo del 2021
+          </p>
+          <a href="" class="cta">Aprende Más</a>
+        </div>
+      </div>
+    </div>
+    <div class="integrantes">
+      <h2 class="titulo">Nuestro Equipo</h2>
+      <figure>
+        <img src="img/Seccion_Nosotros/1.png" alt="" />
+        <div class="capa">
+          <h3>Luis Estrada</h3>
+          <p>Analista de sistemas</p>
+        </div>
+      </figure>
+      <figure>
+        <img src="img/Seccion_Nosotros/2.png" alt="" />
+        <div class="capa">
+          <h3>Sebastian Torres</h3>
+          <p>CEO</p>
+        </div>
+      </figure>
+      <figure>
+        <img src="img/Seccion_Nosotros/3.jpg" alt="" />
+        <div class="capa">
+          <h3>Sebastian Trujillo</h3>
+          <p>Gerente del area de sistemas</p>
+        </div>
+      </figure>
+      <figure>
+        <img src="img/Seccion_Nosotros/4.jpg" alt="" />
+        <div class="capa">
+          <h3>Sebastian Toulier</h3>
+          <p>Programador</p>
+        </div>
+      </figure>
+      <figure>
+        <img src="img/Seccion_Nosotros/5.jpg" alt="" />
+        <div class="capa">
+          <h3>David Huamani</h3>
+          <p>Jefe del Area de Produccion</p>
+        </div>
+      </figure>
+    </div>
+    <!--fin de seccion nosotros-->
     <!--Empeiza Seccion de planes  -->
     <div id="dvSusc" class="container-fluid">
       <div class="row">
