--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </div>
     <!--fin mision y vision-->
     <!--Empieza NOSOTROS  -->
-    <div class="wave-contenedor nosotros-seccion ">
+    <div class="nosotros-seccion">
       <div class="row">
         <div class="col s12 m12 l6">
           <img
@@ -290,7 +290,6 @@
             alt=""
           />
         </div>
-
         <div class="col s12 m12 l6">
           <h2>Sobre Nosotros</h2>
           <p class="parrafo">
@@ -299,7 +298,7 @@
             startup llamado "Las Bichotas" la cual es una compañía que se fundó
             el 24 de marzo del 2021
           </p>
-          <a href="" class="cta">Aprende Más</a>
+          <a href="" class="btn app-color">Aprende Más</a>
         </div>
       </div>
     </div>
