--- a/index.html
+++ b/index.html
@@ -239,7 +239,35 @@
         </div>
       </div>
     </div>
-
+  <!--SeccionProfesor-->
+  <div class="row">
+    <div class="center">
+      <h2>Profesores</h2>
+    </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+              <h5 class="center">Generar Ingresos</h5>
+              <p class=" light"> Generas ingresos a traves de cada estudiante que tengan diversos tipos de suscripcion para las clases particulas, logrando obtener ingresos en poco tiempo y al horario que desees desde la comodidad de tu hogar</p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+              <h5 class="center">Estudiantes/Profesores</h5>
+              <p class="light">Tambien los mismos usuarios, pueden ser profesores para un particular idioma, como parte de mejorar el aprendizaje del idioma elegido, o si solo quiere generar ingresos con la aplicación.</p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+              <h5 class="center">Interfaz facil de usar</h5>
+              <p class="light">Contamos con una seccion de videoconferencias donde tendra una seccion de comentarios, que permitira a los estudiantes comunicarse mejor con el profesor logrando una mejor interaccion entre ambos, tambien en la seccion de recursos virtuales, el profesor podra compartir materiales adicionales con sus estudiantes</p>
+            </div>
+          </div>
+          
+  </div>
+  <!--FinSeccionProfesor-->
     <!--Misión y Vision-->
     <div class="seccion_MisionYVision">
       <div class="row">
