actualizacion home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,12 +43,11 @@
             <i class="material-icons">menu</i>
           </a>
           <ul class="left hide-on-med-and-down">
-            <li><a href="#mission-vision">Mission and vision</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#student-profile">Student Profile</a></li>
-            <li><a href="#tutor-profile">Tutor Profile</a></li>
-            <li><a href="#about-us">About Us</a></li>
-            <li><a href="#pay-plans">Pay Plans</a></li>
+            <li><a href="#student-profile">Perfil del estudiante</a></li>
+            <li><a href="#tutor-profile">Perfil del tutor</a></li>
+            <li><a href="#mission-vision">Misión y Visión</a></li>
+            <li><a href="#about-us">Sobre nosotros</a></li>
+            <li><a href="#dvSusc">Planes de pago</a></li>
           </ul>
         </div>
       </nav>
@@ -56,12 +55,11 @@
 
     <!--Responsive-->
     <ul class="sidenav" id="menu-responsive">
-      <li><a href="#mission-vision">Mission and vision</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#student-profile">Student Profile</a></li>
-      <li><a href="#tutor-profile">Tutor Profile</a></li>
-      <li><a href="#about-us">About Us</a></li>
-      <li><a href="#pay-plans">Pay Plans</a></li>
+      <li><a href="#student-profile">Perfil del estudiante</a></li>
+      <li><a href="#tutor-profile">Perfil del tutor</a></li>
+      <li><a href="#mission-vision">Misión y Visión</a></li>
+      <li><a href="#about-us">Sobre nosotros</a></li>
+      <li><a href="#dvSusc">Planes de pago</a></li>
     </ul>
 
     <!--!NavBar-->
@@ -71,16 +69,14 @@
         <div class="row">
           <div class="col s12 m6 l6">
             <div class="section center-align">
-              <h5>Section 1</h5>
+              <h5>La manera más fácil y divertida de perfeccionarte en un idioma</h5>
               <div class="divider"></div>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Adipisci alias aperiam delectus dignissimos fugit itaque
-                similique tenetur totam! Alias atque eaque earum esse id
-                inventore laboriosam laborum sapiente suscipit vel!
+                Con ILanguage podras ser expandir tus fronteras al perfeccionarte en un idioma.
+                ¡Elige la temática que prefieras y comienza a aprender hoy!
               </p>
-              <a class="waves-effect btn-small app-color">TRY</a>
-              <a class="waves-effect indigo-text white btn-small">LEARN MORE</a>
+              <a class="waves-effect btn-small app-color">EMPIEZA</a>
+              <a class="waves-effect indigo-text white btn-small">MÁS INFORMACIÓN</a>
             </div>
           </div>
           <div class="col s12 m5 l5">
@@ -107,7 +103,7 @@
     <!--!Full background image, headings-->
 
     <!--Seccion Mobile about-->
-    <div class="container seccion-mobile-about" id="about-us">
+    <div class="container seccion-mobile-about">
       <div class="row">
         <div class="col m12 l6 mobile-reserve">
           <img
@@ -176,7 +172,7 @@
       </div>
     </div>
     <!--Seccion Student-->
-    <div class="seccion-student">
+    <div id="student-profile" class="seccion-student">
       <div class="row">
         <div class="center">
           <h2>Estudiantes</h2>
@@ -240,7 +236,7 @@
       </div>
     </div>
   <!--SeccionProfesor-->
-  <div class="row">
+  <div id="tutor-profile" class="row">
     <div class="center">
       <h2>Profesores</h2>
     </div>
@@ -269,7 +265,7 @@
   </div>
   <!--FinSeccionProfesor-->
     <!--Misión y Vision-->
-    <div class="seccion_MisionYVision">
+    <div id="mission-vision" class="seccion_MisionYVision">
       <div class="row">
         <div class="col s12 m12 l6 mision">
           <div class="row mision-vision-content">
@@ -309,7 +305,7 @@
     </div>
     <!--fin mision y vision-->
     <!--Empieza NOSOTROS  -->
-    <div class="nosotros-seccion">
+    <div class="nosotros-seccion" id="about-us">
       <div class="row">
         <div class="col s12 m12 l6">
           <img
