Add about the product video
add seccion about the product

--- a/index.html
+++ b/index.html
@@ -125,6 +125,25 @@
       </div>
     </div>
     <!--fin seccion movile about -->
+    <!--Seccion about the product-->
+    <div class="about-product">
+      <div>
+       <h1 class="center-align">About the product</h1> 
+      </div>
+      <div class="z-depth-5">
+        <iframe
+          width="860"
+          height="615"
+          src="https://www.youtube.com/embed/5QEZIgRnpjo"
+          title="About the product"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+    <!--fin about the product-->
+
     <!--Seccion About call-->
     <div class="about-call container">
       <div class="row about-content">
