feature: update the logo and home page about ilanguage fix: video about the product for mobile divices

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
     <div id="hero" class="hero valign-wrapper">
       <div class="container header-main">
         <div class="row">
-          <div class="col s12 m6 l6">
+          <div class="col s12 m5 l5">
             <div class="section center-align">
+              <img class="responsive-img" src="./img/home-page/apple-icon.png" alt="">
               <h5>
                 La manera más fácil y divertida de perfeccionarte en un idioma
               </h5>
@@ -84,21 +85,13 @@
               >
             </div>
           </div>
-          <div class="col s12 m5 l5">
+          <div class="col s12 m7 l7">
             <div class="class center-align">
               <img
+                id="laptop"
                 class="responsive-img"
-                src="img/home-page/laptop-img.png"
+                src="./img/home-page/laptop-img.png"
                 alt="laptop img"
-              />
-            </div>
-          </div>
-          <div id="iphone" class="col s6 m1 l1">
-            <div class="class center-align">
-              <img
-                class="iphone responsive-img"
-                src="img/home-page/iphone-img.png"
-                alt="iphone img"
               />
             </div>
           </div>
@@ -131,11 +124,11 @@
     </div>
     <!--fin seccion movile about -->
     <!--Seccion about the product-->
-    <div class="about-product">
+    <div class="about-product container">
       <div>
         <h1 class="center-align">About the product</h1>
       </div>
-      <div class="z-depth-5">
+      <div class="z-depth-5 video-container">
         <iframe
           width="860"
           height="615"
